# UAV

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: check_point_cloud.py  prepare_blume.py  prepare_euroc.py  prepare_usegeo.py  run_all.py  run_dim_colmap.py  run_eth3d.py  run_slam_stub.py
src/uav_3d_benchmark/: __init__.py  colmap_pipeline.py  config.py
src/uav_3d_benchmark/datasets/: __init__.py  blume.py  euroc.py
src/uav_pipeline/: __init__.py  cli.py  db_geometric_verification.py  dim_env.py  dim_wrapper.py  gui.py  pipeline.py  user_config.py
uav_3d_benchmark/: colmap_pipeline.py  geometry.py  slam_pipeline.py
uav_3d_benchmark/datasets/: __init__.py  euroc.py  usegeo.py
uav_3d_benchmark/eval/: __init__.py  metrics.py
