[build-system]
# Keep build requirements minimal so editable installs work in offline / proxied environments.
# PEP 621 support in setuptools starts from 61.0.0.
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uav-3d-benchmark"
version = "0.1.0"
description = "Deep-image-matching + COLMAP utilities (CLI + GUI) for UAV 3D reconstruction."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
dependencies = [
    "numpy",
    "pyyaml",
    "opencv-python",
]
authors = [
    { name = "s1mplethings" },
]

[project.urls]
Homepage = "https://example.com/uav-3d-benchmark"

[project.scripts]
uav-dim-colmap = "uav_pipeline.cli:main"
uav-gui = "uav_pipeline.gui:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["uav_*"]
